# Chess

./: About.qml  Board.cpp  Board.h  Board.qml  CMakeLists.txt  Developer.qml  Help.qml  Main.qml  Manage.qml  Mode.qml  Modes.qml  NetWorkBlack.qml  NetWorkWhite.qml  README.md  Setting.qml  Start.qml  StartPage.qml  about.qml  about.txt  board.cpp  board.h  board.qml  chess.cpp  chess.h  developmentDocument.docx  main.cpp  main.qml  more.qml  musicplayer.cpp  musicplayer.h  mynetwork.cpp  mynetwork.h  pieces.cpp  pieces.h  resource.qrc  start.qml
